2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs: clean up

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj: add test map
	* Cumberland.TileViewerTest/Default.aspx.cs,
	  Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.TileViewerTest/Default.aspx: switch to map file

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: need to use
	  GetFeatures()
	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: add GetFeatures()
	  overload

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Cumberland.InteractiveMap.csproj,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.dll,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.dll.config,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.xml,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.dll,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.dll.config,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.xml,
	  Cumberland.Drawing.OpenGL/Cumberland.Drawing.OpenGL.csproj,
	  Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: move out freeglut

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Main.cs: swtich to map file
	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: reproject extents on
	  GetFeatures

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj: add postgis support
	* Cumberland.DrawMap/Main.cs: switch to serialized map
	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: simplify

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-27  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs: remove opengl drawing

2008-10-27  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: add DeleteGlList

2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	
